improve loader (/ fix it on mobile)

--- a/src/main.css
+++ b/src/main.css
@@ -126,7 +126,22 @@ figure {
 	width: 100%;
 	height: 100%;
 
+	& .loader {
+		display: none;
+		align-items: center;
+		justify-content: center;
+		position: fixed;
+		top: 50%;
+		left: 50%;
+		margin-top: -calc(142px / 2);
+		margin-left: -calc(142px / 2);
+		z-index: 501;
+	}
+
 	&.loading {
+		& .loader {
+			display: flex;
+		}
 		&:after {
 			content: '';
 			position: fixed;
@@ -134,7 +149,7 @@ figure {
 			left: 0;
 			right: 0;
 			bottom: 0;
-			background: rgba(0,0,0,.5) url(loading.svg) center center no-repeat;
+			background-color: rgba(0,0,0,.5);
 			z-index: 500;
 		}
 	}
